--- a/index.html
+++ b/index.html
@@ -2,11 +2,145 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Best bakery</title>
   </head>
   <body>
-    Hello Vlad!
-    fdsfdsfsdfdsfdsffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+    <header>
+      <nav>
+        <a href="#">
+          <img src="./images/logo.svg" alt="Best bakery logo" />
+        </a>
+        <ul>
+          <li><a href="#">Our traditions</a></li>
+          <li><a href="#">Chefs</a></li>
+          <li><a href="#">Formats</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
+      </nav>
+      <button type="button">Order a call</button>
+      <!-- Button order buy -->
+    </header>
+    <main>
+      <section>
+        <h1>Best bakery</h1>
+      </section>
+      <section>
+        <ul>
+          <li>High market demand</li>
+          <li>Affordable formats available on a budget</li>
+          <li>Experienced management team</li>
+        </ul>
+        <h2>New format of traditions</h2>
+        <p>
+          <span>shop bakery</span> is a bakery that has taken all the best and
+          preserved the taste of traditional pastries and the naturalness of
+          ingredients
+        </p>
+        <p>
+          We work like the most famous chains —
+          <span>5 minutes and the order is ready</span>. And our bakeries have a
+          stylish design and high quality service!
+        </p>
+        <img
+          src="./images/baker-man.jpg"
+          alt="A male baker looks at a loaf of bread "
+        />
+      </section>
+      <section>
+        <h2>Our best chefs</h2>
+        <ul>
+          <li>
+            <article>
+              <h3>Nastya</h3>
+              <p>Hi, I'm Nastya!</p>
+              <p>
+                I have been bringing interesting and delicious ideas to life for
+                10 years.
+              </p>
+              <p>I'll bake the most delicious products for you!</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Vlad</h3>
+              <p>Hi, I'm Vlad!</p>
+              <p>
+                My patisserie experience is already 18 years old and SHOP BEKERY
+                is our love that we share with you every time through our
+                patisserie!
+              </p>
+              <p>I will make a unique filling for you, to suit every taste!</p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Formats</h2>
+        <ul>
+          <li>
+            <article>
+              <h3>Walrus</h3>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Horsehoe</h3>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Handlebar</h3>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Join the bakery chain</h2>
+      </section>
+      <!-- Maain info -->
+    </main>
+    <footer>
+      <nav>
+        <a href="#">
+          <img src="./images/logo.svg" alt="Best bakery logo" />
+        </a>
+        <ul>
+          <li><a href="#">Our traditions</a></li>
+          <li><a href="#">Chefs</a></li>
+          <li><a href="#">Formats</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+            <!-- tel:+380960000007 сразу звонит на єтот номер -->
+          </li>
+          <li>
+            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/fdj6jaTAyg9wfr3G6" target="_blank"
+              >Ukraine, Kyiv, 54, Sichovykh Striltsiv str.
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <!-- facebook -->
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <!-- Instagram -->
+            </a>
+          </li>
+        </ul>
+        <a href="" target="_blank">Privacy policy</a>
+        <p>© 2024 All rights reserved</p>
+      </address>
+    </footer>
   </body>
 </html>
