--- a/index.html
+++ b/index.html
@@ -4,35 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Best bakery</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="#">
+        <a href="/">
           <img src="./images/logo.svg" alt="Best bakery logo" />
         </a>
         <ul>
-          <li><a href="#">Our traditions</a></li>
-          <li><a href="#">Chefs</a></li>
-          <li><a href="#">Formats</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li>
+            <a class="link" href="#traditions-section">Our traditions</a>
+          </li>
+          <li>
+            <a class="link" href="#chef-section">Chefs</a>
+          </li>
+          <li>
+            <a class="link" href="#formats-section">Formats</a>
+          </li>
+          <li>
+            <a class="link" href="#contact-section">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <button type="button">Order a call</button>
+      <button type="button" class="button">Order a call</button>
       <!-- Button order buy -->
     </header>
     <main>
       <section>
-        <h1>Best bakery</h1>
+        <h1 class="hero-title"><span class="accent">Best</span> bakery</h1>
       </section>
-      <section>
-        <ul>
+      <section id="traditions-section">
+        <ul class="advanteges-list">
           <li>High market demand</li>
           <li>Affordable formats available on a budget</li>
           <li>Experienced management team</li>
         </ul>
-        <h2>New format of traditions</h2>
+        <h2 class="section-title">New format of traditions</h2>
         <p>
           <span>shop bakery</span> is a bakery that has taken all the best and
           preserved the taste of traditional pastries and the naturalness of
@@ -48,8 +57,10 @@
           alt="A male baker looks at a loaf of bread "
         />
       </section>
-      <section>
-        <h2>Our best chefs</h2>
+      <section id="chef-section">
+        <h2 class="section-title">
+          Our best <span class="accent">chefs</span>
+        </h2>
         <ul>
           <li>
             <article>
@@ -76,8 +87,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Formats</h2>
+      <section id="formats-section">
+        <h2 class="section-title">Formats</h2>
         <ul>
           <li>
             <article>
@@ -96,8 +107,16 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Join the bakery chain</h2>
+      <section id="contact-section">
+        <h2 class="section-title">Join the bakery chain</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1297.4601078081112!2d32.01552189050782!3d49.42932237635441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d14c6cf9648869%3A0x3b1de997a62ae93d!2zQmFrZXJ5INC_0LXQutCw0YDQvdGPLdC60LDQsifRj9GA0L3Rjw!5e0!3m2!1sru!2sua!4v1722512538686!5m2!1sru!2sua"
+          width="603"
+          height="595"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </section>
       <!-- Maain info -->
     </main>
@@ -123,8 +142,8 @@
             <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
           </li>
           <li>
-            <a href="https://maps.app.goo.gl/fdj6jaTAyg9wfr3G6" target="_blank"
-              >Ukraine, Kyiv, 54, Sichovykh Striltsiv str.
+            <a href="https://maps.app.goo.gl/RsKXzcXCrXNJucqU8" target="_blank"
+              >Ukraine, Cherkasy, 10, Vitalii Verhai Street.
             </a>
           </li>
           <li>
@@ -139,7 +158,7 @@
           </li>
         </ul>
         <a href="" target="_blank">Privacy policy</a>
-        <p>© 2024 All rights reserved</p>
+        <p>&copy; 2024 All rights reserved</p>
       </address>
     </footer>
   </body>
