--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
           <li>
             <a class="link" href="#traditions-section">Our traditions</a>
           </li>
-          <li>
-            <a class="link" href="#chef-section">Chefs</a>
-          </li>
+          <li><a class="link" href="#chef-section">Chefs</a></li>
           <li>
             <a class="link" href="#formats-section">Formats</a>
           </li>
@@ -37,20 +35,22 @@
       </section>
       <section id="traditions-section">
         <ul class="advanteges-list">
-          <li>High market demand</li>
-          <li>Affordable formats available on a budget</li>
-          <li>Experienced management team</li>
+          <li class="advanteges-item">High market demand</li>
+          <li class="advanteges-item">
+            Affordable formats avai lable on a budget
+          </li>
+          <li class="advanteges-item">Experienced management team</li>
         </ul>
         <h2 class="section-title">New format of traditions</h2>
-        <p>
-          <span>shop bakery</span> is a bakery that has taken all the best and
-          preserved the taste of traditional pastries and the naturalness of
-          ingredients
+        <p class="traditions-text">
+          <span class="brand-color-text uppercase">Shop bakery</span> is a
+          bakery that has taken all the best and preserved the taste of
+          traditional pastries and the naturalness of ingredients
         </p>
-        <p>
+        <p class="traditions-text">
           We work like the most famous chains —
-          <span>5 minutes and the order is ready</span>. And our bakeries have a
-          stylish design and high quality service!
+          <span class="brand-color-text">5 minutes and the order is ready</span
+          >. And our bakeries have a stylish design and high quality service!
         </p>
         <img
           src="./images/baker-man.jpg"
@@ -64,7 +64,7 @@
         <ul>
           <li>
             <article>
-              <h3>Nastya</h3>
+              <h3 class="chefs-title">Nastya</h3>
               <p>Hi, I'm Nastya!</p>
               <p>
                 I have been bringing interesting and delicious ideas to life for
@@ -75,7 +75,7 @@
           </li>
           <li>
             <article>
-              <h3>Vlad</h3>
+              <h3 class="chefs-title">Vlad</h3>
               <p>Hi, I'm Vlad!</p>
               <p>
                 My patisserie experience is already 18 years old and SHOP BEKERY
@@ -92,23 +92,45 @@
         <ul>
           <li>
             <article>
-              <h3>Walrus</h3>
+              <h3 class="format-title">Walrus</h3>
+              <div class="format-text">
+                <p>Area: up to 120 m2</p>
+                <p>Menu: extensive menu</p>
+                <p>
+                  Staff: 2 cashiers, 2 bakers, 2 bakery assistants, 2
+                  waiters/waitresses
+                </p>
+                <p>Seating: there are</p>
+              </div>
             </article>
           </li>
           <li>
             <article>
-              <h3>Horsehoe</h3>
+              <h3 class="format-title">Horsehoe</h3>
+              <div class="format-text">
+                <p>Area: up to 25 m2</p>
+                <p>Menu: the most popular dishes</p>
+                <p>Staff: 2 cashiers, 2 bakers, 1 assistant baker</p>
+                <p>Seating: No seating</p>
+              </div>
             </article>
           </li>
           <li>
             <article>
-              <h3>Handlebar</h3>
+              <h3 class="format-title">Handlebar</h3>
+              <div class="format-text">
+                <p>Area: up to 15 m2</p>
+                <p>Menu: the most popular dishes</p>
+                <p>Staff: 1 salesperson, 1 baker, 1 baker's assistant</p>
+                <p>Seating: no seating</p>
+              </div>
             </article>
           </li>
         </ul>
       </section>
       <section id="contact-section">
         <h2 class="section-title">Join the bakery chain</h2>
+        <p>Fill out the form to contact us!</p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1297.4601078081112!2d32.01552189050782!3d49.42932237635441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d14c6cf9648869%3A0x3b1de997a62ae93d!2zQmFrZXJ5INC_0LXQutCw0YDQvdGPLdC60LDQsifRj9GA0L3Rjw!5e0!3m2!1sru!2sua!4v1722512538686!5m2!1sru!2sua"
           width="603"
@@ -126,24 +148,32 @@
           <img src="./images/logo.svg" alt="Best bakery logo" />
         </a>
         <ul>
-          <li><a href="#">Our traditions</a></li>
-          <li><a href="#">Chefs</a></li>
-          <li><a href="#">Formats</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a class="link" href="#traditions-section">Our traditions</a></li>
+          <li><a class="link" href="#chef-section">Chefs</a></li>
+          <li><a class="link" href="#formats-section">Formats</a></li>
+          <li><a class="link" href="#contact-section">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="tel:+380960000007">+ 38 (096) 000 00 07</a>
+            <a class="address-link" href="tel:+380960000007"
+              >+ 38 (096) 000 00 07</a
+            >
             <!-- tel:+380960000007 сразу звонит на єтот номер -->
           </li>
           <li>
-            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+            <a class="address-link" href="mailto:shopbakery@gmail.com"
+              >shopbakery@gmail.com</a
+            >
           </li>
           <li>
-            <a href="https://maps.app.goo.gl/RsKXzcXCrXNJucqU8" target="_blank"
-              >Ukraine, Cherkasy, 10, Vitalii Verhai Street.
+            <a
+              class="address-link"
+              href="https://maps.app.goo.gl/RsKXzcXCrXNJucqU8"
+              target="_blank"
+            >
+              Ukraine, Cherkasy, 10, Vitalii Verhai Street.
             </a>
           </li>
           <li>
@@ -157,8 +187,8 @@
             </a>
           </li>
         </ul>
-        <a href="" target="_blank">Privacy policy</a>
-        <p>&copy; 2024 All rights reserved</p>
+        <a class="address-link" href="" target="_blank">Privacy policy</a>
+        <p class="address-copyright">&copy; 2024 All rights reserved</p>
       </address>
     </footer>
   </body>
